deployed_apps/test222/base/test222-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test222
  namespace: test222
  labels:
    app: test222
    version: 0.0.1
    backstage.io/kubernetes-id: test222
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test222
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: test222
        version: 0.0.1
        backstage.io/kubernetes-id: test222
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"        
    spec:
      containers:
      - name: test222
        image: webgo
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
