deployed_apps/test222/base/test222-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test222-gw
  namespace: test222
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - test222.pauloponciano.digital
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - test222.pauloponciano.digital
      port:
        name: https-workloads
        number: 443
        protocol: HTTP
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test222-vs
  namespace: test222
  labels:
    app: test222
    version: 0.0.1
    backstage.io/kubernetes-id: test222
spec:
  gateways:
  - test222-gw
  hosts:
  - test222.pauloponciano.digital
  http:
  - name: primary
    route:
    - destination:
        host: test222-service
      weight: 100
